solucion problemas al cargar las listas y borrar o editar datos